# FUMP_Taak

./: .gitignore  README.md
HomeSwapping/: Generator.hs  Reader.hs  Solver.hs  homeswapping.cabal  input.yaml  main.hs
HomeSwapping/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
MaanLander/: Maanlander.hs  Result.hs  debug.txt  maanlander.cabal  maanlander_output.txt  maanlander_plot.py  main.hs  run.sh
MaanLander/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
TypeClasses/: City.hs  Image.hs  Main.hs  Metric.hs  PrimitiveSimilarity.hs  Tree.hs  TypeClasses.cabal  main.hs  run.sh  typeclass.hs
TypeClasses/City/: City.hs
TypeClasses/Image/: Image.hs
TypeClasses/Person/: Age.hs  Education.hs  Ethnicity.hs  Gender.hs  Person.hs  Personality.hs
TypeClasses/Tree/: Tree.hs  TreeStructure.hs
TypeClasses/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
