cabal-version:       2.4
name:                homeswapping
version:             0.1.0.0
build-type:          Simple

executable homeswapping
    main-is:            main.hs
    hs-source-dirs:     .
    other-modules:      Generator
                        Reader
                        Solver
    default-language:   Haskell2010
    build-depends:
        base >=4.14 && <5,
        random  >=1.2,
        array   >=0.5 && <0.6
    ghc-options:       -Wall