cabal-version:       2.4
name:                maanlander
version:             0.1.0.0
build-type:          Simple

executable maanlander
    main-is:            main.hs
    hs-source-dirs:     .
    other-modules:      Maanlander
    default-language:   Haskell2010

    build-depends:
        base >=4.14 && <5,
        threepenny-gui,
        directory,
        process,
        time,
        filepath,
        containers,
        template-haskell
    ghc-options:       -Wall
