cabal-version:       2.4
name:                typeclasses
version:             0.1.0.0
build-type:          Simple

executable typeclasses
    main-is:            Main.hs
    hs-source-dirs:     .
    other-modules:      
        Metric
        Tree
        Image

        Person.Age
        Person.Education
        Person.Ethnicity
        Person.Gender
        Person.Personality
        Person.Person

    default-language:   Haskell2010

    build-depends:
        base >=4.14 && <5,
    ghc-options:       -Wall
